Update ProductController